--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="page">
 
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place-header">
+      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в
         своей жизни? <a href="#" class="header__link">Узнать →</a></p>
@@ -27,20 +27,20 @@
 
         <div class="two-columns">
 
-          <h2 class="two-columns_brief">Главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
 
-          <div class="two-columns_main-text">
+          <div class="two-columns__main-text">
 
-            <p class="two-columns_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
               материал. Мы готовимся к экзаменам и
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
               дает нам реального знания. Зубрежка быстро выветривается т не приносит пользы.</p>
 
-            <p class="two-columns_paragraph"><span class="two-columns__span-accent">Вывод:
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:
               </span>
               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
 
-            <p class="two-columns_paragraph">Конкретные техники упражнения помогают изменить подход к обучению, сделать
+            <p class="two-columns__paragraph">Конкретные техники упражнения помогают изменить подход к обучению, сделать
               его эффективным и
               захватывающим. Эти техники применяются на примере обучения в Практикуме.</p>
 
@@ -56,46 +56,46 @@
         <div class="table">
 
           <div class="table__cell">
-            <p class="table__heading">86 миллиардов</p>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </div>
 
           <div class="table__cell">
-            <p class="table__heading">2.1 миллиарда</p>
+            <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </div>
 
           <div class="table__cell">
-            <p class="table__heading">1000 терабайт</p>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объем памяти человека</p>
           </div>
 
           <div class="table__cell">
-            <p class="table__heading">500 триллионов</p>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
 
           <div class="table__cell">
-            <p class="table__heading">420 миллионов</p>
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для
               трудоустройства
             </p>
-            <p class="table__tex">Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
 
           <div class="table__cell">
-            <p class="table__heading">17-20 лет</p>
+            <h3 class="table__heading">17-20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </div>
 
           <div class="table__cell">
-            <p class="table__heading">1885 год</p>
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </div>
 
           <div class="table__cell">
-            <p class="table__heading">1889 год</p>
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
@@ -117,59 +117,59 @@
         <div class="table">
 
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table_theme_dark">1</p>
-            <p class="table__text table_theme_dark">Выберете привлекательный объект.</p>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберете привлекательный объект.</p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table_theme_dark">2</p>
-            <p class="table__text table_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table_theme_dark">3</p>
-            <p class="table__text table_theme_dark">Определите целевой уровень мастерства.</p>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table_theme_dark">4</p>
-            <p class="table__text table_theme_dark">Разбейте навык на элементы.</p>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table_theme_dark">5</p>
-            <p class="table__text table_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table_theme_dark">6</p>
-            <p class="table__text table_theme_dark">Устрените препятствия для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устрените препятствия для занятий.</p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table_theme_dark">7</p>
-            <p class="table__text table_theme_dark">Выделите специальное время для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table_theme_dark">8</p>
-            <p class="table__text table_theme_dark">Создайте быстрые петли обратной связи.</p>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table_theme_dark">9</p>
-            <p class="table__text table_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table_theme_dark">10</p>
-            <p class="table__text table_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
 
         <div class="kaufman__triangle">
-
         </div>
+
       </section>
 
     </main>
@@ -179,7 +179,7 @@
       <div class="footer__columns">
 
         <div class="footer__column footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place-footer">
+          <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
           <p class="footer__author">© 2021. Екатерина Аникеева</p>
         </div>
 
@@ -187,26 +187,26 @@
 
           <h3 class="footer__column-heading">О Практикуме</h3>
 
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепция</a>
-            <a href="#" class="footer__column-link">Наставники</a>
-          </div>>
-        </nav>>
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link">Главная</a></li>
+            <li><a href="#" class="footer__column-link">Концепция</a></li>
+            <li><a href="#" class="footer__column-link">Наставники</a></li>
+          </ul>
+        </nav>
 
         <nav class="footer__column footer__column_content_social">
 
           <h3 class="footer__column-heading">Соцсети</h3>
 
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Логотип"
-                class="footer__social-icon"> Facebook</a>
-            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Логотип"
-                class="footer__social-icon"> ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Логотип"
-                class="footer__social-icon"> Instagram</a>
-          </div>>
-        </nav>>
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Логотип"
+                class="footer__social-icon"> Facebook</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Логотип"
+                class="footer__social-icon"> ВКонтакте</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Логотип"
+                class="footer__social-icon"> Instagram</a></li>
+          </ul>
+        </nav>
       </div>
     </footer>
   </div>
