--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 
 <body>
@@ -18,7 +17,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в
         своей жизни? <a href="#" class="header__link">Узнать →</a></p>
       <img src="./images/header-image.png" alt="Мальчик с собакой" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -34,7 +33,7 @@
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
               материал. Мы готовимся к экзаменам и
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
-              дает нам реального знания. Зубрежка быстро выветривается т не приносит пользы.</p>
+              дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
 
             <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:
               </span>
@@ -46,6 +45,99 @@
 
           </div>
         </div>
+      </section>
+
+      <section class="techniques">
+
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+
+        <div class="cards">
+
+          <div class="cards__item">
+            <img src="./images_sprint-2/cards-attention.png" alt="Картинка: руки с листом" class="cards__image">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">
+              Глубокие знания<br>возникают, если чередовать<br>
+              сфокусированное и<br>рассеянное мышление.</p>
+          </div>
+
+          <div class="cards__item">
+            <img src="./images_sprint-2/cards-recall.png" alt="Картинка: задумчивый памятник" class="cards__image">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">
+              Вспоминайте изученное — <br>это позволит соединить<br>
+              разрозненные порции<br>памяти.</p>
+          </div>
+
+          <div class="cards__item">
+            <img src="./images_sprint-2/cards-interliving.png" alt="Картинка: Интерливинг" class="cards__image">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">
+              Изучайте несколько<br>навыков одновременно,<br>
+              они обогащают друг друга.</p>
+          </div>
+
+          <div class="cards__item">
+            <img src="./images_sprint-2/cards-question.png" alt="Картинка: человек один в комнате" class="cards__image">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя,<br>придумывайте хороший<br>вопрос, который
+              вас<br>действительно волнует.</p>
+          </div>
+
+          <div class="cards__item">
+            <img src="./images_sprint-2/cards-competence.png" alt="Картинка: рука держит книги" class="cards__image">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">
+              Повторите про себя,<br>запишите, расскажите<br>
+              другу: вам только кажется,<br>что вы владеете новой<br>темой.</p>
+          </div>
+        </div>
+
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+
+        <div class="video__iframes">
+
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen> </iframe>
+
+        </div>
+      </section>
+
+      <section class="oakley">
+
+        <div class="two-columns">
+
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+
+          <div class="two-columns__main-text">
+
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя
+              законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
+              чтобы получить надбавку, да так успешно, что её выдвинули в командиры.
+              Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой
+              подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания
+              гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+
+        <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
       <section class="digits">
@@ -101,12 +193,22 @@
         </div>
       </section>
 
-      <section class="feynman">
-
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-
-        <a href="#" class="feynman__link">Подробнее →</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру.
+            Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут
+            получить
+            навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="./images_sprint-2/khan-book.jpg" alt="Изображение книги Салмана Хана" class="khan__pic">
+            <a href="#" class="khan__buy-link">Купить книгу →</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
@@ -158,7 +260,8 @@
 
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
-            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
@@ -167,9 +270,23 @@
           </div>
         </div>
 
-        <div class="kaufman__triangle">
+        <div class="kaufman__triangle rotation">
         </div>
 
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+
+        <div class="resources__logo-zone">
+          <img src="./images_sprint-2/logo/resources-arzamas.svg" alt="Логотип компании Arzamas"
+            class="resources__logo">
+          <img src="./images_sprint-2/logo/resources-n1.svg" alt="Логотип компании N+1" class="resources__logo">
+          <img src="./images_sprint-2/logo/resources-strelka.svg" alt="Логотип компании STRELKA"
+            class="resources__logo">
+          <img src="./images_sprint-2/logo/resources-polka.svg" alt="Логотип компании ПОЛКА" class="resources__logo">
+        </div>
       </section>
 
     </main>
@@ -200,11 +317,11 @@
 
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Логотип"
-                class="footer__social-icon"> Facebook</a></li>
+                  class="footer__social-icon"> Facebook</a></li>
             <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Логотип"
-                class="footer__social-icon"> ВКонтакте</a></li>
+                  class="footer__social-icon"> ВКонтакте</a></li>
             <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Логотип"
-                class="footer__social-icon"> Instagram</a></li>
+                  class="footer__social-icon"> Instagram</a></li>
           </ul>
         </nav>
       </div>
